--- a/admin/package.json
+++ b/admin/package.json
@@ -1,6 +1,7 @@
 {
   "name": "admin",
   "version": "0.1.0",
+  "license": "MIT",
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "@reduxjs/toolkit": "^1.5.1",
@@ -9,6 +10,8 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "chroma-js": "^2.1.2",
+    "hexsorter": "^1.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
