--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "client": "cd client && yarn start",
     "admin": "cd admin && yarn start",
     "dev:client": "concurrently \"yarn run server\" \"yarn run client\"",
-    "dev:admin": "concurrently \"yarn run server\" \"yarn run admin\""
+    "dev:admin": "concurrently \"yarn run server\" \"yarn run admin\"",
+    "start": "concurrently \"yarn run server\" \"yarn run admin\" \"yarn run client\""
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.1",
+    "colorthief": "^2.3.2",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "get-image-colors": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
+    "node-vibrant": "^3.2.1-alpha.1",
     "sass": "^1.32.13",
     "uuid": "^8.3.2"
   },
